[gd_scene load_steps=7 format=2]

[ext_resource path="res://StageOne.gd" type="Script" id=1]
[ext_resource path="res://Mosquito.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/Concept_BG_5.png" type="Texture" id=3]
[ext_resource path="res://GameHUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="StageOne" type="Node2D"]
script = ExtResource( 1 )
Mosquito = ExtResource( 2 )

[node name="BG" type="Sprite" parent="."]
scale = Vector2( 0.666667, 0.666667 )
texture = ExtResource( 3 )
centered = false

[node name="GameHUD" parent="." instance=ExtResource( 4 )]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="SpawnMosquitoTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="MosquitoContainer" type="Node" parent="."]

[node name="MosquitoPath" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 1 )

[node name="MosquitoSpawnLocation" type="PathFollow2D" parent="MosquitoPath"]

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 1150, 370 )

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="SpawnMosquitoTimer" to="." method="_on_SpawnMosquitoTimer_timeout"]
